# rgit

./: .gitignore  Cargo.toml  README.md
src/: main.rs  repo.rs
src/config/: repo.rs
src/pages/: mod.rs
src/pages/repo/: mod.rs
src/pages/statics/: img.rs  mod.rs
src/tests/: mod.rs  repo_tests.rs
statics/css/: main.css
statics/js/: repo.js
templates/: main.html  repo.html
